# LlamaIndex-Learning

./: README.md  main.py  pyproject.toml
data/: Essay on AI.txt
