[tool.poetry]
name = "llamaindex learning"
version = "0.1.0"
description = ""
authors = ["Rahul Pandey <rahulrpandey1105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.11.18"
llama-index-embeddings-huggingface = "^0.3.1"
llama-index-llms-ollama = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
